--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,93 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 auto;
   width: 1110px;
   height: 45.35px;
   background-color: #f6f7ff;
+}
+.header .header-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1110px;
+  height: 45.35px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header .header-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 104px;
+}
+.header .header-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 433px;
+  height: 19px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
+.header .header-navigaton__tab {
+  color: #272323;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 24px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+.header .header-navigaton__tab:hover {
+  color: #4238af;
+}
+.header .header-search {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 307px;
+  height: 35px;
+}
+.header .header-search__input {
+  border: none;
+  border-radius: 50px;
+  width: 100%;
+  padding-left: 20px;
+}
+.header .header-search__button {
+  position: absolute;
+  top: 10px;
+  left: 280px;
+}
+.header .header-authentication {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  width: 117px;
+  height: 19px;
+}
+.header .header-authentication__tab {
+  color: #272323;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 24px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+.header .header-authentication__tab:hover {
+  color: #4238af;
 }
