--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@ $color4: #ff5c01;
 $color5: #a8a8a8;
 $color6: #544cac;
 
+
 @mixin font ($w, $s, $h) {
     font-weight: $w;
     font-size: $s;
@@ -173,5 +174,134 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: end;
+    }
+}
+.section-logotype {
+    display: flex;
+    background-color: #ffffff;
+    height: 150px;
+    
+    .section-logotype__icons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 1110px;
+        height: 114px;
+        margin: 0 auto;
+        margin-top: 18px;
+    }
+}
+.section-process {
+    display: flex;
+    height: 600px;
+    background-color: #ffffff;
+    .section-process__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: end;
+        margin: 0 auto;
+        width: 1110px;
+        height: 470px;
+        margin-top: 65px;
+    }
+    .section-process__information {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 435px;
+        height: 100%;
+    }
+    .section-process__images {
+        display: flex;
+        width: 635px;
+        height: 423px;
+    }
+    .section-process__subtitle {
+        color: $color4;
+        font-family: 'Oswald', sans-serif;
+        @include font(400, 12px, 50px)
+    }
+    .section-process__title {
+        font-family: 'Oswald', sans-serif;
+        @include font(400, 40px, 50px)
+    }
+    .section-process__card {
+        display: flex;
+        align-items: center;
+        width: 435px;
+        height: 58px;
+        background-color: $color1;
+        border-radius: 8px;
+    }
+    .section-process__unfolded {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 435px;
+        height: 134px;
+        background-color: $color1;
+        border-radius: 8px;
+    }
+    .section-process__card-number-one {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        background-color: #f3e0ff;
+        color: #9443ca;
+        border-radius: 6px;
+        margin: 0 15px 0 15px;
+    }
+    .section-process__unfolded-title {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
+    .section-process__card-number-two {
+        display: flex;
+        width: 30px;
+        height: 30px;
+        justify-content: center;
+        align-items: center;
+        background-color: #e6eafe;
+        color: #636eff;
+        border-radius: 6px;
+        margin: 0 15px 0 15px;
+    }
+    .section-process__card-number-third {
+        display: flex;
+        width: 30px;
+        height: 30px;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffdecc;
+        color: #ff5c01;
+        border-radius: 6px;
+        margin: 0 15px 0 15px;
+    }
+    .section-process__card-text {
+        font-family: 'Open Sans', sans-serif;
+        @include font(600, 16px, 50px)
+    }
+    .section-process__icon-one {
+        margin-left: 200px;
+    }
+    .section-process__icon-two {
+        margin-left: 197px;
+    }
+    .section-process__icon-third {
+        margin-left: 260px;
+    }
+    .section-process__text {
+        font-family: 'Open Sans', sans-serif;
+        @include font(400, 12px, 22px);
+        color: $color5;
+        width: 435px;
+        display: flex;
+        margin-left: 15px;
+    }
+    .section-process__image {
+        border-radius: 20px;
     }
 }
