--- a/css/style.css
+++ b/css/style.css
@@ -1076,3 +1076,67 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
+.section-statistics {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 350px;
+  background-color: #ffffff;
+}
+.section-statistics .section-statistics__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1110px;
+  height: 229px;
+  background-color: #ced5f4;
+  border-radius: 30px;
+  margin: 0 auto;
+  margin-top: 60.5px;
+}
+.section-statistics .section-statistics__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 863px;
+  height: 81px;
+}
+.section-statistics .section-statistics__metrics {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.section-statistics .section-statistics__title {
+  color: #584ec6;
+  font-family: "Oswald";
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 50px;
+}
+.section-statistics .section-statistics__subtitle {
+  font-family: "Open Sans", sans-serif;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
